LU-6434 ofd: object reference leaks in ofd_preprw_write

In ofd_preprw_write(), the object should be released when an
error happenes.

Signed-off-by: Li Xi <lixi@ddn.com>
Change-Id: Icd143f994d63c97472fb7d24cb9517da516280b7
Reviewed-on: http://review.whamcloud.com/14370
Tested-by: Jenkins
Reviewed-by: Jinshan Xiong <jinshan.xiong@intel.com>
Reviewed-by: Yang Sheng <yang.sheng@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>